centered errything in mobile
cause I can't decide what looks good at all

--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -346,6 +346,12 @@ nav {
 
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
+    #skills, #foot {
+        text-align: center;
+        h2 {
+            text-align: center;
+        }
+    }
     $menu-height: 64px;
     .sticky-wrapper {
         height: $menu-height !important;
