--- a/css/main.scss
+++ b/css/main.scss
@@ -42,7 +42,13 @@ $on-laptop:        800px;
   }
 }
 
-
+%vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
