--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -238,9 +238,9 @@
 /**
  * Jumbotron
  */
-$grad-left: #00A388;
-$grad-top: #FF6138;
-$grad-right: #BEEB9F;
+$grad-top: #8CBEB2;
+$grad-left: #F06060;
+$grad-right: #F2EBBF;
 .jumbotron {
   min-height: 75vh;
   background-color: #1d1d1d;
