--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,9 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list" itemscope itemtype="http://data-vocabulary.org/Person">
+          <li class="contact-list__avatar">
+            <img itemprop="photo" src="https://secure.gravatar.com/avatar/a2b36fe61081d63aa781f4ab7a6222d3.png?s=200" alt="Austin Pray">
+          </li>
           <li itemprop="name">Austin Pray</li>
           <li itemprop="role">Full Stack Developer</li>
           <li><a itemprop="affiliation" href="http://corelaunch.com">CoreLaunch LLC</a></li>
