--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,34 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="post-meta">
+      {{ page.date | date: "%b %-d, %Y" }}
+      {% if page.author %} • {{ page.author }}{% endif %}
+      {% if page.path %} • <a href="{{ site.repo_baseurl }}{{ page.path }}">
+        <i class="ion-social-markdown"></i> View Sauce
+      </a>{% endif %}
+      {% if page.path %} • <a href="{{ site.repo_editurl }}{{ page.path }}">
+        <i class="ion-edit"></i> Edit
+      </a>{% endif %}
+      {% if page.meta %} • {{ page.meta }}{% endif %}
+    </p>
   </header>
 
   <article class="post-content">
     {{ content }}
   </article>
+  <div class="post-content">
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+var disqus_shortname = 'austinpraycom';
+(function() {
+  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+})();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </div>
+    
 
 </div>
