--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,16 +4,18 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
-        <ul class="contact-list" itemscope itemtype="http://data-vocabulary.org/Person">
+        <ul class="contact-list" itemscope itemtype="http://schema.org/Person">
           <li class="contact-list__avatar">
-            <img itemprop="photo" src="https://secure.gravatar.com/avatar/a2b36fe61081d63aa781f4ab7a6222d3.png?s=200" alt="Austin Pray">
+            <img itemprop="image" src="https://secure.gravatar.com/avatar/a2b36fe61081d63aa781f4ab7a6222d3.png?s=200" alt="Austin Pray">
           </li>
           <li itemprop="name">Austin Pray</li>
-          <li itemprop="role">Full Stack Developer</li>
-          <li><a itemprop="affiliation" href="http://corelaunch.com">CoreLaunch LLC</a></li>
-          <li itemprop="address" itemscope>
-            <span itemprop="locality">Dallas</span>, 
-            <span itemprop="region">TX</span>
+          <li itemprop="jobTitle">Full Stack Developer</li>
+          <li itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+            <a itemprop="name" href="http://corelaunch.com">CoreLaunch LLC</a>
+          </li>
+          <li itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+            <span itemprop="addressLocality">Dallas</span>, 
+            <span itemprop="addressRegion">TX</span>
           </li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li itemprop="telephone">(903) 345-5550</li>
