Adds email as itemprop

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             <span itemprop="addressLocality">Dallas</span>, 
             <span itemprop="addressRegion">TX</span>
           </li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li itemprop="email"><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li itemprop="telephone">(903) 345-5550</li>
         </ul>
       </div>
