--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
           <li itemprop="name">Austin Pray</li>
           <li itemprop="jobTitle">Full Stack Developer</li>
           <li itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-            <a itemprop="name" href="http://corelaunch.com">CoreLaunch LLC</a>
+            <a itemprop="url" href="http://corelaunch.com"><span itemprop="name">CoreLaunch LLC</span></a>
           </li>
           <li itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="addressLocality">Dallas</span>, 
