woops corrected stackoverflow link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,7 @@
           {% endif %}
           {% if site.stackoverflow %}
           <li>
-            <a href="{{ site.stackoverflow }}" rel="publisher">
+            <a href="{{ site.stackoverflow }}">
               <i class="ion-link"></i>
               <span class="username">Stack Overflow</span>
             </a>
