--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
     <p class="post-meta">
-      {{ page.date | date: "%b %-d, %Y" }}
-      {% if page.author %} • {{ page.author }}{% endif %}
+      <time itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+      {% if page.author %} • <span itemprop="author">{{ page.author }}</span>{% endif %}
       {% if page.path %} • <a href="{{ site.repo_baseurl }}{{ page.path }}">
         <i class="ion-social-markdown"></i> View Sauce
       </a>{% endif %}
@@ -18,7 +18,7 @@ layout: default
     </p>
   </header>
 
-  <article class="post-content">
+  <article class="post-content" itemprop="articleBody">
     {{ content }}
   </article>
   <div class="post-content">
