Change background gradient once again

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,9 +245,9 @@
 /**
  * Jumbotron
  */
-$grad-top: #8CBEB2;
-$grad-left: #F06060;
-$grad-right: #F2EBBF;
+$grad-top: #A7BD5B;
+$grad-right: #8DC7B8;
+$grad-left: #DC574E;
 .jumbotron {
   min-height: 75vh;
   background-color: #1d1d1d;
