--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,19 @@
 
   <body>
 
-    {% include header.html %}
+    <div class="layout-default">
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+      {% include header.html %}
+
+      <div class="page-content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
+
+        {% include footer.html %}
       </div>
-    </div>
 
-    {% include footer.html %}
+    </div>
 
   </body>
 
