--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,8 @@ $main-accent:      #59ABE3;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$dark: mix(#1d1d1d, $main-accent, 64%);
+$darker: mix(#1d1d1d, $main-accent, 80%);
 
 // Width of the content area
 $content-width:    800px;
