--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -196,6 +196,28 @@
   font-size: 24px;
 }
 
+.block-link {
+  display: block;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .post-meta {
+    display: inline;
+    float: right;
+  }
+}
+
+@include media-query($on-palm) {
+  .block-link {
+    .post-meta {
+      display: block;
+      float: none;
+    }
+  }
+}
+
 
 
 /**
@@ -241,63 +263,6 @@
       font-size: 18px;
     }
   }
-}
-
-/**
- * Jumbotron
- */
-.jumbotron {
-  min-height: 75vh;
-  background-color: $main-accent;
-  background:
-    linear-gradient(
-      180deg,
-      $main-accent,
-      lighten($main-accent, 20%)
-    );
-  color: #fff;
-  position: relative;
-}
-
-.jumbotron--small {
-  @extend .jumbotron;
-  min-height: 40vh;
-}
-
-.jumbotron-links {
-  font-size: 2em;
-  a {
-    padding: 0 0.2em;
-    &, &:link, &:visited {
-      color: #fff;
-      text-decoration: none;
-    }
-    &:hover{
-      color: $brand-color;
-    }
-    &:active {
-      color: saturate(darken($brand-color, 20%), 50%);
-    }
-  }
-}
-
-.jumbotron-content {
-  font-size: 2vw;
-  @include media-query($on-laptop) {
-    font-size: 1em;
-  }
-  @extend %vertical-align;
-  width: 100%;
-  text-align: center;
-  position: absolute;
-}
-
-.jumbotron-title {
-  font-size: 3em;
-}
-
-.jumbotron-byline {
-  font-size: 1em;
 }
 
 // d3
@@ -386,9 +351,8 @@ $breakpoint: 750px;
       min-height:100vh;
       @include flex(1);
       max-width: 320px;
-      background-color: $dark;
+      background-color: $main-accent;
       color: #fff;
-      width: 200px;
     }
 
     .site-header-wrapper {
@@ -399,6 +363,16 @@ $breakpoint: 750px;
       @include flex(3);
       padding: $spacing-unit 0;
     }
+  }
+}
+
+@media (min-width: 1550px) {
+  .site-header {
+    position: fixed;
+    width: 320px;
+    left: 0;
+    top:0;
+    bottom:0;
   }
 }
 
