Add screenhero to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,6 +54,14 @@
             </a>
           </li>
           {% endif %}
+          {% if site.screenhero %}
+          <li>
+            <a href="{{ site.screenhero }}">
+              <i class="ion-monitor"></i>
+              <span class="username">Screenhero</span>
+            </a>
+          </li>
+          {% endif %}
         </ul>
       </div>
 
