--- a/css/matt.scss
+++ b/css/matt.scss
@@ -33,3 +33,67 @@ body {
 .ps1 {
   color: #A6E22E;
 }
+
+.user-ps1 {
+  color: #66D9EF;
+}
+.help-ps1 {
+  color: #F92672;
+}
+
+.message {
+  clear: both;
+  .ps1 {
+    float: left;
+  }
+  .message-text {
+    margin-left: 1em;
+  }
+}
+
+.message-text{
+  p {
+    margin: 0;
+  }
+
+  code {
+    background: #FD971F;
+  }
+}
+
+.message {
+  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1s; /* Firefox < 16 */
+  -ms-animation: fadein 1s; /* Internet Explorer */
+  -o-animation: fadein 1s; /* Opera < 12.1 */
+  animation: fadein 1s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
