--- a/css/matt.scss
+++ b/css/matt.scss
@@ -5,6 +5,7 @@ body {
   background: #272822;
   color: #fff;
   font-family: monospace;
+  font-size: 120%;
 }
 
 .frame {
@@ -51,9 +52,16 @@ body {
   }
 }
 
+.message-image {
+  img {
+    max-height: 300px;
+    max-width: 100%;
+  }
+}
+
 .message-text{
   p {
-    margin: 0;
+    margin: 0.5em 0;
   }
 
   code {
