--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,14 +8,13 @@
           <li itemprop="name">Austin Pray</li>
           <li itemprop="jobTitle">Full Stack Developer</li>
           <li itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-            <a itemprop="url" href="http://corelaunch.com"><span itemprop="name">CoreLaunch LLC</span></a>
+            <a itemprop="url" href="https://oncarrot.com"><span itemprop="name">oncarrot.com</span></a>
           </li>
           <li itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <span itemprop="addressLocality">Dallas</span>, 
             <span itemprop="addressRegion">TX</span>
           </li>
           <li itemprop="email"><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          <li itemprop="telephone">(903) 345-5550</li>
         </ul>
       </div>
 
